<resources>
    <string name="app_name">DemoRetrofitWithCoroutine</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="doctor">Doctor</string>
    <string name="dr_manu_singh">Dr Manu Singh</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="dr_seema_singh">Dr Seema Singh</string>
    <string name="_5_year">5 year</string>
    <string name="mbbs_md">MBBS, MD</string>
    <string name="brd_medical_collage">BRD Medical Collage</string>
    <string name="contact_person_syed">Contact Person Syed</string>
    <string name="call_on_8343834383">Call on 8343834383</string>
    <string name="away_12_km">Away 12 km</string>
    <string name="driver_hitesh_prasad">Driver: Hitesh Prasad</string>
    <string name="contact_8343834383">Contact : 8343834383</string>
    <string name="base_charges_1800">Base charges : 1800</string>
    <string name="hitesh_prasad">Hitesh Prasad</string>
    <string name="_1700">1700</string>
    <string name="book_now">Book Now</string>
    <string name="harsi_singh">Harsi Singh</string>
    <string name="b_sc_nursing">B.Sc. Nursing</string>
    <string name="we_do_not_have_any_your_medical_history_once_your_doctor_will_upload_your_prescription_then_you_will_be_able_to_see_your_medical_history_we_also_do_not_have_any_medicine_order_data_from_our_app_if_you_have_some_health_issue_please_book_some_appointment_with_the_doctor_and_purchase_some_medicine">We do not have any your medical history. Once your doctor will upload your prescription then you will be able to see your medical history. We also do not have any medicine order data from our app. if you have some health issue please book some appointment with the doctor and purchase some medicine</string>
    <string name="you_ask_for_emergency_help_we_are_looking_into_it_we_will_reach_you_soon_you_can_connect_with_our_team_on_emergency_help_number">You ask for emergency help. We are looking into it. We will reach you soon. You can connect with our team on emergency help number</string>
    <string name="connect_at_8243434312">Connect At : 8243434312</string>
    <string name="appointment_booked">Your Appointment is booked</string>
</resources>