<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginStart="@dimen/dp_8"
    android:layout_marginTop="@dimen/dp_8"
    android:layout_marginEnd="@dimen/dp_8">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_ambulance"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_4"
        app:srcCompat="@drawable/ic_ambulance" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_ambulance_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/hitesh_prasad"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_ambulance_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/contact_8343834383"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/txt_ambulance_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/_1700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_ambulance_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/away_12_km"
            android:textSize="16sp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_click_me"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_4"
        android:text="@string/book_now"
        app:cornerRadius="@dimen/dp_8"
        />


</LinearLayout>