<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_doctor"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_doctor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dr_manu_singh"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:text="@string/_5_year"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/txt_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginBottom="@dimen/dp_16"
            android:text="@string/mbbs_md"
            android:textSize="18sp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_click_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="@dimen/dp_4"
        android:text="@string/book_appointment"
        app:cornerRadius="@dimen/dp_8"
        />


</LinearLayout>