<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="horizontal">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_doctor_at_home"
        android:layout_width="@dimen/dp_36"
        android:layout_height="@dimen/dp_36"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_doctor" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_doctor_at_home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="Dr. Naveen Singh"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_doctor_at_home_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/contact_8343834383"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/txt_Doctor_at_home_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/_5_year"
            android:textSize="16sp"

            />

        <TextView
            android:id="@+id/txt_doctor_at_home_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/mbbs_md"
            android:textSize="18sp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_doctor_at_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:text="@string/book_appointment"
        app:cornerRadius="@dimen/dp_8" />


</LinearLayout>